23/06/2017:
	- Added new OBJ metadata request for IIP protocol to return full list
	  of existing image resolutions.


19/06/2017:
	- Modified URI_MAP to parse this prefix first and only if not present,
	  to use the query string. This allows query strings to be appended for
	  caching purposes etc.


14/06/2017:
	- Added URI_MAP environment variable to enable mapping of URL prefixes
	  to specific protocol handlers without requiring web server rewriting.
	- Added missing checkImage() function to JTL and harmonized with CVT.cc.


12/06/2017:
	- Added try block to avoid crashes with malformed images in older
	  versions of Kakadu.


05/04/2017:
	- Fixed crash in KakaduImage.cc when zero sized images are requested


29/03/2017:
	- Fixed scaling factor for bilinear interpolation in Transforms.cc


02/03/2017:
	- Added extra conditions to JTL uncompressed tile request and slightly
	  refactored code to fix bug when greyscale conversion requested


08/02/2017:
	- Extra try/catch in KakaduImage for images with missing codestreams


29/11/2016:
	- Another update to IIIF aspect ratio code


28/11/2016:
	- Update to aspect ratio code for sizes exceeding max CVT limit


18/11/2016:
	- Modified IIIF.cc to respect aspect ratio when only width or height size
	  parameter is given and size exceeds server max CVT limit.


16/10/2016:
	- Added IIIF 2.1 square region support


29/08/2016:
	- Fix to bug in rotation code for 270 degs introduced when parallelization added.
	- Added test for pkg-config to configure.ac script.


10/08/2016:
	- Update to configure.ac script for OpenJPEG


04/08/2016:
	- Fix to info.json code in IIIF.cc to avoid problems with images containing only
	  one resolution level.
	- Fixed bug in filter_contrast() due to incorrectly calculated buffer size.


08/07/2016:
	- Removed "gray" from IIIF list of supported features - already specified in the
	  qualities list.


07/06/2016: