@@ -217,6 +217,9 @@ http://server/iiif/ to the IIIF protocol handler without requiring web server re
 CACHE_CONTROL: Set the HTTP Cache-Control header. See http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.9 for 
 a full list of options. If not set, header defaults to "max-age=86400" (24 hours).
 
+EMBED_ICC: Set whether the ICC profile is embedded within the output image.
+0 to strip profile, 1 to embed profile. The default is 1 (embedded profiles).
+
 DECODER_MODULES: Comma separated list of external modules for decoding 
 other image formats. This is only necessary if you have activated 
 --enable-modules for ./configure and written your own image format 
